--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -4,52 +4,17 @@ on:
   workflow_dispatch:
 
 jobs:
-  define-matrix:
-    runs-on: ubuntu-latest
-
-    outputs:
-      colors: ${{ steps.colors.outputs.colors }}
-
-    steps:
-      - name: Define Colors
-        id: colors
-        run: |
-          echo 'colors=["red", "green", "blue"]' >> "$GITHUB_OUTPUT"
-
-  produce-artifacts:
-    runs-on: ubuntu-latest
-    needs: define-matrix
+  example_matrix:
     strategy:
       matrix:
-        color: ${{ fromJSON(needs.define-matrix.outputs.colors) }}
-
+        version: [10, 12, 14]
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Define Color
         env:
-          color: ${{ matrix.color }}
+          os: ${{ matrix.os }}
+          version: ${{ matrix.version }}
         run: |
-          echo "$color" > color
-      - name: Produce Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.color }}
-          path: color
-
-  consume-artifacts:
-    runs-on: ubuntu-latest
-    needs:
-    - define-matrix
-    - produce-artifacts
-    strategy:
-      matrix:
-        color: ${{ fromJSON(needs.define-matrix.outputs.colors) }}
-
-    steps:
-    - name: Retrieve Artifact
-      uses: actions/download-artifact@v5
-      with:
-        name: ${{ matrix.color }}
-
-    - name: Report Color
-      run: |
-        cat color
+          echo "$os" > os
+          echo "$version" > version
