--- a/.github/workflows/called.yml
+++ b/.github/workflows/called.yml
@@ -8,7 +8,7 @@ on:
         type: string
 
 jobs:
-  triage:
+  print-config-path:
     runs-on: ubuntu-latest
     steps:
       - name: Print config path
